# WinBGIm-64

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
.github/workflows/: cmake.yml
libbgi/: CMakeLists.txt
libbgi/include/bgi/: dibapi.h  graphics.h  winbgim.h  winbgitypes.h
libbgi/src/: bgiout.cxx  dibutil.cxx  drawing.cxx  file.cxx  misc.cxx  mouse.cxx  palette.cxx  text.cxx  winbgi.cxx  winthread.cxx
src/: bgi.cxx  dibutil.cxx  dibutil.h  drawing.cxx  file.cxx  misc.cxx  mouse.cxx  palette.cxx  text.cxx  winbgi.cxx  winthread.cxx
test/: CMakeLists.txt  graphics.h  test.cpp
